--- a/LavageProject/src/main/webapp/WEB-INF/web.xml
+++ b/LavageProject/src/main/webapp/WEB-INF/web.xml
@@ -2,11 +2,18 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
   <display-name>LavageProject</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-    <welcome-file>default.htm</welcome-file>
+    <welcome-file>Dashboard.jsp</welcome-file>
+     <welcome-file>listEmploye.jsp</welcome-file>
+      <welcome-file>addEmploye.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <servlet-name>s1</servlet-name>
+    <servlet-class>app.Controllers.Employeservlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>s1</servlet-name>
+    <url-pattern>/Employeservlet</url-pattern>
+  </servlet-mapping>
+  
+  
 </web-app>
